--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 					   <!-- slide -->
 					   <li>
 						   <div class="flex-caption">
-								<h1 class="">Say hello to <span>Decorowl</span>. We create awesome and stunning 
-									digital solutions.
+								<h1 class=""> <span>Decorowl</span>. We create awesome and stunning 
+									digital solutions for buying decore item.
 								</h1>	
 									
 								<h3 class="">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</h3>				   
