--- a/index.html
+++ b/index.html
@@ -62,13 +62,9 @@
 
 	      </nav> <!-- end #nav-wrap -->
 
-	      <ul class="header-social">
-	        	<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-	        	<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-	        	<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-	      </ul>      
+	           
 
-	   </div>
+	</div>
 
    </header> <!-- end header -->
 
@@ -103,7 +99,7 @@
 	      </div> <!-- end twelve columns-->
 					
 		</div> <!-- end row -->	
- 	
+ 	<iframe width="560" height="315" src="https://www.youtube.com/embed/lOrlHm1nePA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
 			
    </section> <!-- end homepage hero -->
 
