--- a/index.html
+++ b/index.html
@@ -81,11 +81,13 @@
 			   <div id="hero-slider" class="flexslider">
 			   <table>
 			   <tr>
+			        <div class="flex-caption">
 					<td>
-						<h1 class=""> <span>Decorowl</span>. We create awesome and stunning 
+						<h1><class=""> <span>Decorowl</span>. We create awesome and stunning 
 									digital solutions for buying decore item.
 						</h1>
 					</td>
+					</div>
 					<td>
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/lOrlHm1nePA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
 					</td>
