--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 				</tr>
 				<tr>
 					<td>
-						 <div id="go-top">
-							<a href="#hero" position:relative;>Android App</a>
+						<div id="android">
+							<a class="smoothscroll" title="Back to Top" href="#hero">Download Android Application</a>
 						</div>
 					</td>
 					<td>
