Add Basic How it Work's Section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	         <ul id="nav" class="nav">
 	            <li><a class="smoothscroll" href="#hero">Home</a></li>
 		         <li><a class="smoothscroll" href="#features">Features</a></li>
-	            <li><a class="smoothscroll" href="#services">How it Works</a></li>
+	            <li><a class="smoothscroll" href="#how-works">How it Works</a></li>
 	            <li><a class="smoothscroll" href="#about">Our Vision</a></li>
 	            <li><a class="smoothscroll" href="#contact">About Us</a></li>
 	         </ul> <!-- end #nav -->
@@ -89,7 +89,7 @@
 					</td>
 					</div>
 					<td>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/D5gEK1xzPUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/D5gEK1xzPUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</td>
 				</tr>
 				<tr>
@@ -177,98 +177,25 @@
 
    <!-- Services Section
    ================================================== -->
-   <section id="services">
+   <section id="how-works">
 
-   	<div class="row section-head">
+     <div class="container">
 
-      	<div class="twelve columns">
+       <div class="card-row">
 
-      		<h1>Our Awesome Services<span>.</span></h1>
+         <div class="card-container-2">
+           <div class="section-title">
+             <h1>How It Works</h1>
+             <div class="line"/>
+           </div>
+         </div>
 
-	         <hr />
+         <div class="card-container-2">
 
-	         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-	         eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-	         voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-	         </p>
+         </div>
+       </div>
 
-	      </div>
-
-      </div> <!-- end section-head -->
-
-      <div class="row mobile-no-padding">
-
-	      <div class="service-list bgrid-third s-bgrid-half tab-bgrid-whole group">
-
-	      	<div class="bgrid">
-
-	            <h3>Marketing.</h3>
-
-	            <div class="service-content">
-		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-	         		</p>
-	         	</div>
-
-				</div> <!-- end bgrid -->
-
-				<div class="bgrid">
-
-	            <h3>Videography.</h3>
-
-	            <div class="service-content">
-		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-	         		</p>
-	            </div>
-
-			   </div> <!-- end bgrid -->
-
-			   <div class="bgrid">
-
-	            <h3>Photography.</h3>
-
-	            <div class="service-content">
-		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-	        			</p>
-	            </div>
-
-			   </div> <!-- end bgrid -->
-
-				<div class="bgrid">
-
-	            <h3>Branding.</h3>
-
-	            <div class="service-content">
-		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-	         		</p>
-	            </div>
-
-				</div> <!-- end bgrid -->
-
-			   <div class="bgrid">
-
-	            <h3>Web Design.</h3>
-
-	            <div class="service-content">
-		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-	        			</p>
-	            </div>
-
-			   </div> <!-- end bgrid -->
-
-			   <div class="bgrid">
-
-	            <h3>Web Development.</h3>
-
-	            <div class="service-content">
-		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-	        			</p>
-	            </div>
-
-			   </div> <!-- end bgrid -->
-
-	      </div> <!-- end service-list -->
-
-      </div> <!-- end row -->
+     </div>
 
    </section> <!-- end services -->
 
