--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					</td>
 					</div>
 					<td>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/D5gEK1xzPUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/BzNFNiVWH3M?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</td>
 				</tr>
 				<tr>
