--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
 			   <table>
 			   <tr>
 					<td>
-						<h1><class=""> <span>Decorowl</span>. We create awesome and stunning
+						<div id="homeheader"> <h1><span>Decorowl</span>. We create awesome and stunning
 									digital solutions for buying decore item.
 						</h1>
+						</div>
 					</td>
 					<td>
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/BzNFNiVWH3M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
