--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
                <li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>
                <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
-               <li><a href="#"><i class="fa fa-insta-square"></i></a></li>
+               <li><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
                <li><a href="#"><i class="fa fa-flickr"></i></a></li>
                <li><a href="#"><i class="fa fa-skype"></i></a></li>
             </ul>
@@ -502,7 +502,7 @@
       	</div>
 
          <ul class="copyright">
-         	<li>&copy; Copyright 2020 Decorowl.</li>
+         	<li>&copy; Copyright 20 Decorowl.</li>
          	<li>Design by <a href="http://www.decorowl.co/">Decorowl.</a>.</li>
          </ul>
 
