--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
          	</a>
 
 	         <ul id="nav" class="nav">
-	            <li><a class="smoothscroll" href="#hero">Home</a></li>
-		         <li><a class="smoothscroll" href="#features">Features</a></li>
-	            <li><a class="smoothscroll" href="#how-works">How it Works</a></li>
-	            <li><a class="smoothscroll" href="#about">Our Vision</a></li>
-	            <li><a class="smoothscroll" href="#contact">About Us</a></li>
+	            <li><a class="smoothscroll" href="#home">Home</a></li>
+		        <li><a class="smoothscroll" href="#features">Features</a></li>
+	           <!--<li><a class="smoothscroll" href="#how-works">How it Works</a></li>-->
+	            <li><a class="smoothscroll" href="#hero">Our Vision</a></li>
+	           <!-- <li><a class="smoothscroll" href="#contact">About Us</a></li>
 	         </ul> <!-- end #nav -->
 
 	      </nav> <!-- end #nav-wrap -->
@@ -167,7 +167,12 @@
        </div>
 
      </div>
-
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	
    </section>
 
 
@@ -257,7 +262,7 @@
 
    <!-- contact
    ================================================== -->
-   <section id="contact">
+  <!--- <section id="contact">
    <div class="row team section-head">
 
    		<div class="twelve columns">
@@ -270,7 +275,7 @@
 
       </div> <!-- end section-head -->
 
-      <div class="row">
+  <!---    <div class="row">
 
          <div id="team-wrapper" class="bgrid-fourth s-bgrid-third tab-bgrid-half mob-bgrid-whole group">
 
@@ -298,7 +303,7 @@
 
             </div> <!-- end member -->
 
-            <div class="bgrid member">
+  <!---          <div class="bgrid member">
 
 					<div class="member-pic">
                   <img src="images/team/member03-k.jpg" alt=""/>
@@ -322,7 +327,7 @@
 
             </div> <!-- end member -->
 
-            <div class="bgrid member">
+ <!---           <div class="bgrid member">
 
 					<div class="member-pic">
 						<img src="images/team/member04-k.jpg" alt=""/>
@@ -347,9 +352,11 @@
      			</div> <!-- end member -->
 
            
-         </div> <!-- end team-wrapper -->
+ <!--        </div> <!-- end team-wrapper -->
 
-      </div> <!-- end row -->
+ <!--     </div> <!-- end row --> 
+
+<section id=contact>
 
    	<div class="row section-head">
 
@@ -412,18 +419,9 @@
 
             <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
 
-	         <h3 class="address">Come Visit</h3>
 
-	         <p>
-            1600 Amphitheatre Parkway<br>
-            Mountain View, CA<br>
-            94043 US
-            </p>
-
-            <h3>Contact Numbers:</h3>
-			   <p>Phone: (000) 555 1212<br>
-			   	Mobile: (000) 555 0100<br>
-			     	Fax: (000) 555 0101
+            <h3>Mail id:</h3>
+			   <p>info@decorowl.co<br>
 			   </p>
 
          </div>
