--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 		        <li><a class="smoothscroll" href="#features">Features</a></li>
 	           <!--<li><a class="smoothscroll" href="#how-works">How it Works</a></li>-->
 	            <li><a class="smoothscroll" href="#hero">Our Vision</a></li>
-	           <!-- <li><a class="smoothscroll" href="#contact">About Us</a></li>
+	           <li><a class="smoothscroll" href="#contact">Contact Us</a></li>
+			   <li><a class="" href="">About Us</a></li>
 	         </ul> <!-- end #nav -->
 
 	      </nav> <!-- end #nav-wrap -->
@@ -453,7 +454,8 @@
 
             <div class="info">
 
-            	<div class="footer-logo"></div>
+            	<div class="footer-logo"> </div>
+				<div class="mii-logo"></div>
 
 	            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
 	            Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
@@ -465,7 +467,7 @@
       	</div>
 
          <ul class="copyright">
-         	<li>&copy; Copyright 20 Decorowl.</li>
+         	<li>&copy; Copyright 2020 Decorowl.</li>
          	<li>Design by <a href="http://www.decorowl.co/">Decorowl.</a>.</li>
          </ul>
 
