--- a/about-us.html
+++ b/about-us.html
@@ -72,12 +72,13 @@
 
    <!-- homepage hero
    ================================================== -->
-   <section id="home">
+   <section id="AboutHome">
 
 		<div class="row hero-content">
 
 			   <div id="home-slider">
 			   
+			   hello
 			   
 
 	      </div> <!-- end twelve columns-->
