--- a/about-us.html
+++ b/about-us.html
@@ -74,23 +74,30 @@
    ================================================== -->
    <section id="AboutHome">
 
-		<div class="row hero-content">
-
-			   <div id="home-slider">
-			   
-			   hello
-			   
-
-	      </div> <!-- end twelve columns-->
-
-		</div> <!-- end row -->
-
+		
    </section> <!-- end homepage hero -->
 
 
+<!--- Latter about Us-->
 
+   <section id="Latter">
+	<h1> What we do </h1>
+	<h3>
+	Dreamt up by a team of décor-loving non-designers on a mission to build an interior design experience that puts the customer first, Decology gives you the tools to bring your interior inspiration to life, putting great design in the palm of your hand.
+
+We also believe that great ideas don’t just come from the experts but from the passionate. That’s why we are building a community where décor-lovers like us – whether professionals or amateurs – are able to share tips, Decology designs, ask questions and give each other advice on all things interiors.
+
+We are on a mission to give everyone the tools to be their own interior design guru, and we are so excited to hit the ground running. Here’s to putting great design in your hands,
+	</h3>
+   </section>
+   
+   <!---
+   Latter Section End Here
+   -->
+   
    <!-- contact
    ================================================== -->
+  
   <section id="contact">
    <div class="row team section-head">
 
