--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	           <!--<li><a class="smoothscroll" href="#how-works">How it Works</a></li>-->
 	            <li><a class="smoothscroll" href="#hero">Our Vision</a></li>
 	           <li><a class="smoothscroll" href="#contact">Contact Us</a></li>
-			   <li><a class="" href="">About Us</a></li>
+			   <li><a class="" href="aboutUs.html">About Us</a></li>
 	         </ul> <!-- end #nav -->
 
 	      </nav> <!-- end #nav-wrap -->
