--- a/aboutUs.html
+++ b/aboutUs.html
@@ -236,11 +236,8 @@ We are on a mission to give everyone the tools to be their own interior design g
          	<li>&copy; Copyright 2020 Decorowl.</li>
          	<li>Design by <a href="http://www.decorowl.co/">Decorowl.</a>.</li>
          </ul>
-
-         <div id="go-top">
-            <a class="smoothscroll" title="Back to Top" href="#hero">Back to Top<i class="fa fa-angle-up"></i></a>
-         </div>
-
+		 
+		
       </div> <!-- end row -->
 
    </footer> <!-- end footer -->
@@ -248,6 +245,8 @@ We are on a mission to give everyone the tools to be their own interior design g
    <div id="preloader">
     	<div id="loader"></div>
    </div>
+   
+    <button onclick="topFunction()" id="myBtn" title="Go to top"></button>
 
    <!-- Java Script
    ================================================== -->
@@ -260,6 +259,7 @@ We are on a mission to give everyone the tools to be their own interior design g
    <script src="js/jquery.placeholder.min.js"></script>
    <script src="js/jquery.magnific-popup.min.js"></script>
    <script src="js/main.js"></script>
+   <script src="js/scrollUp.js"></script>
 
 </body>
 
