--- a/index.html
+++ b/index.html
@@ -181,11 +181,8 @@
    ================================================== -->
   <!-- 
    <section id="how-works">
-
      <div class="container">
-
        <div class="card-row">
-
          <div class="card-container-2">
            <div class="section-title">
              <h1>How It Works</h1>
@@ -193,9 +190,7 @@
            </div>
          </div>
        </div>
-
      </div>
-
    </section> <!-- end services --> 
 
  <!-- Our Vision
@@ -265,23 +260,15 @@
    ================================================== -->
   <!--- <section id="contact">
    <div class="row team section-head">
-
    		<div class="twelve columns">
-
 	         <h1>Meet Our Team<span>.</span></h1>
-
 	         <hr />
-
 	      </div>
-
       </div> <!-- end section-head -->
 
   <!---    <div class="row">
-
          <div id="team-wrapper" class="bgrid-fourth s-bgrid-third tab-bgrid-half mob-bgrid-whole group">
-
             <div class="bgrid member">
-
 					<div class="member-pic">
 						<img src="images/team/member01-k.jpg" alt=""/>
                  	<div class="mask"></div>
@@ -290,10 +277,8 @@
                   <h3>Naruto Uzumaki</h3>
                   <span>Creative Director</span>
                </div>
-
                <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
                nisi elit consequat ipsum, nec sagittis sem nibh id elit. </p>
-
                <ul class="member-social">
                   <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                   <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -301,11 +286,9 @@
                   <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                   <li><a href="#"><i class="fa fa-skype"></i></a></li>
                </ul>
-
             </div> <!-- end member -->
 
   <!---          <div class="bgrid member">
-
 					<div class="member-pic">
                   <img src="images/team/member03-k.jpg" alt=""/>
                	<div class="mask"></div>
@@ -314,10 +297,8 @@
                   <h3>Sasuke Uchiha</h3>
                   <span>Lead Designer</span>
                </div>
-
                <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
                nisi elit consequat ipsum, nec sagittis sem nibh id elit. </p>
-
                <ul class="member-social">
                   <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                   <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -325,11 +306,9 @@
                   <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                   <li><a href="#"><i class="fa fa-skype"></i></a></li>
                </ul>
-
             </div> <!-- end member -->
 
  <!---           <div class="bgrid member">
-
 					<div class="member-pic">
 						<img src="images/team/member04-k.jpg" alt=""/>
                  	<div class="mask"></div>
@@ -338,10 +317,8 @@
                   <h3>Shikamaru Nara</h3>
                   <span>Designer</span>
                </div>
-
                <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
                nisi elit consequat ipsum, nec sagittis sem nibh id elit. </p>
-
                <ul class="member-social">
                   <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                   <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -349,7 +326,6 @@
                   <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                   <li><a href="#"><i class="fa fa-skype"></i></a></li>
                </ul>
-
      			</div> <!-- end member -->
 
            
@@ -482,6 +458,8 @@
    <div id="preloader">
     	<div id="loader"></div>
    </div>
+   
+   <button onclick="topFunction()" id="myBtn" title="Go to top"></button>
 
    <!-- Java Script
    ================================================== -->
@@ -494,6 +472,7 @@
    <script src="js/jquery.placeholder.min.js"></script>
    <script src="js/jquery.magnific-popup.min.js"></script>
    <script src="js/main.js"></script>
+   <script src="js/scrollUp.js"></script>
 
 </body>
 
