--- a/aboutUs.html
+++ b/aboutUs.html
@@ -83,11 +83,14 @@
    <section id="Latter">
 	<h1> What we do </h1>
 	<h3>
-	Dreamt up by a team of décor-loving non-designers on a mission to build an interior design experience that puts the customer first, Decology gives you the tools to bring your interior inspiration to life, putting great design in the palm of your hand.
+	Buying home decor products from local vendors through online platform has been restrictive due to certain barriers and, this industry has not been benifitted from the digitization of commerical commodity(e-commerce). DecorOwl aims to break those barrier through the use of 21st century promising technology - Agumented Reality (AR) and Artificial Intelligence (AI).
+	<br>
+	<br>
+DecorOwl is an E-Marketplace which connects local home decor vendors to a single platform. DecorOwl provides smart AI solution to vendors to increase their customer outreach, and AR-AI based solution to customer to smartly select product of their need.
+	<br>
+	<br>
+Happy Shopping.
 
-We also believe that great ideas don’t just come from the experts but from the passionate. That’s why we are building a community where décor-lovers like us – whether professionals or amateurs – are able to share tips, Decology designs, ask questions and give each other advice on all things interiors.
-
-We are on a mission to give everyone the tools to be their own interior design guru, and we are so excited to hit the ground running. Here’s to putting great design in your hands,
 	</h3>
 	
 	<h2>
