--- a/index.html
+++ b/index.html
@@ -262,20 +262,13 @@
   
 
 <section id=testy>
-
-   	<div class="row section-head">
-
-
-   		<div class="twelve columns">
-
-	         <h1>Get In Touch With Us<span>.</span></h1>
-
-	         <hr />
-
-	      </div>
-
-      </div> <!-- end section-head -->
-
+		<div class="container">
+       <div class="section-title">
+         <h1>Get in Touch with Us</h1>
+         <div class="line"/>
+       </div>
+		</div>
+		
       <div class="row">
 
       	<div id="contact-form" class="six columns tab-whole left">
@@ -345,13 +338,13 @@
       	<div class="twelve columns content group">
 
 				<ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
+               <!--<li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
                <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>
-               <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
-               <li><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
+               <li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>-->
+               <li><a href="https://www.youtube.com/channel/UCSXjT-nGLqF7fmxkvOS3pDQ"><i class="fa fa-youtube-play"></i></a></li>
+               <!--<li><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
                <li><a href="#"><i class="fa fa-flickr"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="#"><i class="fa fa-skype"></i></a></li>-->
             </ul>
 
             <hr />
@@ -361,9 +354,7 @@
             	<div class="footer-logo"> </div>
 				<div class="mii-logo"></div>
 
-	            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-	            Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-	            nibh id elit.
+	            <p>
 	            </p>
 
 	         </div>
