--- a/aboutUs.html
+++ b/aboutUs.html
@@ -129,19 +129,19 @@ Happy Shopping.
                  	<div class="mask"></div>
                </div>
                <div class="member-name">
-                  <h3>Naruto Uzumaki</h3>
-                  <span>Creative Director</span>
+                  <h3>Dhyey Patel</h3>
+                  <!--<span>Creative Director</span>-->
                </div>
 
-               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-               nisi elit consequat ipsum, nec sagittis sem nibh id elit. </p>
+               <p></p>
 
                <ul class="member-social">
                   <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                   <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                   <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a href="#"><i class="fa fa-skype"></i></a></li>
+				  <!--<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                  <li><a href="#"><i class="fa fa-skype"></i></a></li>-->
+				  <li><a href="#"><i class="fa fa-github"></i></a></li>
                </ul>
 
             </div> <!-- end member -->
@@ -153,19 +153,19 @@ Happy Shopping.
                	<div class="mask"></div>
                </div>
                <div class="member-name">
-                  <h3>Sasuke Uchiha</h3>
-                  <span>Lead Designer</span>
+                  <h3>Parth Bhalodiya</h3>
+                  <!--<span>Lead Designer</span>--->
                </div>
 
-               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-               nisi elit consequat ipsum, nec sagittis sem nibh id elit. </p>
+               <p></p>
 
                <ul class="member-social">
-                  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                   <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                   <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                   <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a href="#"><i class="fa fa-skype"></i></a></li>
+				  <!--<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                  <li><a href="#"><i class="fa fa-skype"></i></a></li>-->
+				  <li><a href="#"><i class="fa fa-github"></i></a></li>
                </ul>
 
             </div> <!-- end member -->
@@ -177,19 +177,19 @@ Happy Shopping.
                  	<div class="mask"></div>
                </div>
                <div class="member-name">
-                  <h3>Shikamaru Nara</h3>
-                  <span>Designer</span>
+                  <h3>Kishan Vaishnani</h3>
+                  <!--<span>Designer</span>-->
                </div>
 
-               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-               nisi elit consequat ipsum, nec sagittis sem nibh id elit. </p>
+               <p> </p>
 
                <ul class="member-social">
-                  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                  <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                   <li><a href="https://www.facebook.com/vaishnanikishan"><i class="fa fa-facebook"></i></a></li>
+                  <li><a href="https://twitter.com/vaishnanikishan"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="https://www.linkedin.com/in/kishanvaishnani/"><i class="fa fa-linkedin"></i></a></li>
+				  <!--<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                  <li><a href="#"><i class="fa fa-skype"></i></a></li>-->
+				  <li><a href="https://github.com/kdv4"><i class="fa fa-github"></i></a></li>
                </ul>
 
      			</div> <!-- end member -->
@@ -210,13 +210,13 @@ Happy Shopping.
       	<div class="twelve columns content group">
 
 				<ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
+               <!--<li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
                <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>
-               <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
-               <li><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
+               <li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>-->
+               <li><a href="https://www.youtube.com/channel/UCSXjT-nGLqF7fmxkvOS3pDQ"><i class="fa fa-youtube-play"></i></a></li>
+               <!--<li><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
                <li><a href="#"><i class="fa fa-flickr"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="#"><i class="fa fa-skype"></i></a></li>-->
             </ul>
 
             <hr />
@@ -226,9 +226,7 @@ Happy Shopping.
             	<div class="footer-logo"> </div>
 				<div class="mii-logo"></div>
 
-	            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-	            Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-	            nibh id elit.
+	            <p>
 	            </p>
 
 	         </div>
