--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		        <li><a class="smoothscroll" href="#features">Features</a></li>
 	           <!--<li><a class="smoothscroll" href="#how-works">How it Works</a></li>-->
 	            <li><a class="smoothscroll" href="#hero">Our Vision</a></li>
-	           <li><a class="smoothscroll" href="#contact">Contact Us</a></li>
+	           <li><a class="smoothscroll" href="#testy">Contact Us</a></li>
 			   <li><a class="" href="aboutUs.html">About Us</a></li>
 	         </ul> <!-- end #nav -->
 
@@ -261,7 +261,7 @@
    ================================================== -->
   
 
-<section id=testy>
+<section id="testy">
 		<div class="container">
        <div class="section-title">
          <h1>Get in Touch with Us</h1>
@@ -315,12 +315,8 @@
 
          <div class="six columns tab-whole right">
 
-            <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-
-
-            <h3>Mail id:</h3>
-			   <p>info@decorowl.co<br>
-			   </p>
+            <p class="lead">For more infromation you can mail us on </p> <h3>info@decorowl.co</h3> <p class="lead">or you can fill the form given aside <br> stay tunned for more latest updates!!
+		</p>
 
          </div>
 
