--- a/aboutUs.html
+++ b/aboutUs.html
@@ -53,12 +53,12 @@
          	</a>
 
 	         <ul id="nav" class="nav">
-	            <li><a class="smoothscroll" href="index.html">Home</a></li>
-		        <li><a class="smoothscroll" href="index.html">Features</a></li>
+	            <li><a class="" href="./index.html#Home">Home</a></li>
+		        <li><a class="" href="./index.html#features">Features</a></li>
 	           <!--<li><a class="smoothscroll" href="#how-works">How it Works</a></li>-->
-	            <li><a class="smoothscroll" href="index.html">Our Vision</a></li>
-	           <li><a class="smoothscroll" href="index.html">Contact Us</a></li>
-			   <li><a class="" href="aboutUs.html">About Us</a></li>
+	            <li><a class="" href="./index.html#hero">Our Vision</a></li>
+	           <li><a class="" href="./index.html#testy">Contact Us</a></li>
+			   <li><a class="smoothscroll" href="#">About Us</a></li>
 	         </ul> <!-- end #nav -->
 
 	      </nav> <!-- end #nav-wrap -->
