--- a/aboutUs.html
+++ b/aboutUs.html
@@ -106,15 +106,12 @@ Happy Shopping.
    ================================================== -->
   
   <section id="contact">
-   <div class="row team section-head">
 
-   		<div class="twelve columns">
-
-	         <h1>Meet Our Team<span>.</span></h1>
-
-	         <hr />
-
-	      </div>
+   		<div class="container">
+       <div class="section-title">
+         <h1>Meet our Team</h1>
+         <div class="line"/>
+       </div>
 
       </div> <!-- end section-head -->
 
