Fix AboutUs nav bar color

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -53,12 +53,12 @@
          	</a>
 
 	         <ul id="nav" class="nav">
-	            <li><a class="" href="./index.html#Home">Home</a></li>
-		        <li><a class="" href="./index.html#features">Features</a></li>
+	            <li><a href="./index.html"><span class="about-nav">Home</span></a></li>
+		        <li><a href="./index.html#features"><span class="about-nav">Features</span></a></li>
 	           <!--<li><a class="smoothscroll" href="#how-works">How it Works</a></li>-->
-	            <li><a class="" href="./index.html#hero">Our Vision</a></li>
-	           <li><a class="" href="./index.html#testy">Contact Us</a></li>
-			   <li><a class="smoothscroll" href="#">About Us</a></li>
+	            <li><a href="./index.html#hero"><span class="about-nav">Our Vision</span></a></li>
+	           <li><a href="./index.html#testy"><span class="about-nav">Contact Us</span></a></li>
+			   <li><a class="smoothscroll" href="#"><span class="about-nav">About Us</span></a></li>
 	         </ul> <!-- end #nav -->
 
 	      </nav> <!-- end #nav-wrap -->
@@ -74,7 +74,7 @@
    ================================================== -->
    <section id="AboutHome">
 
-		
+
    </section> <!-- end homepage hero -->
 
 
@@ -92,19 +92,19 @@ DecorOwl is an E-Marketplace which connects local home decor vendors to a single
 Happy Shopping.
 
 	</h3>
-	
+
 	<h2>
 	Team DecorOwl
 	</h2>
    </section>
-   
+
    <!---
    Latter Section End Here
    -->
-   
+
    <!-- contact
    ================================================== -->
-  
+
   <section id="contact">
 
    		<div class="container">
@@ -191,10 +191,10 @@ Happy Shopping.
 
      			</div> <!-- end member -->
 
-           
+
        </div> <!-- end team-wrapper -->
 
-    </div> <!-- end row --> 
+    </div> <!-- end row -->
 
  </section>
 
@@ -234,8 +234,8 @@ Happy Shopping.
          	<li>&copy; Copyright 2020 Decorowl.</li>
          	<li>Design by <a href="http://www.decorowl.co/">Decorowl.</a>.</li>
          </ul>
-		 
-		
+
+
       </div> <!-- end row -->
 
    </footer> <!-- end footer -->
@@ -243,7 +243,7 @@ Happy Shopping.
    <div id="preloader">
     	<div id="loader"></div>
    </div>
-   
+
     <button onclick="topFunction()" id="myBtn" title="Go to top"></button>
 
    <!-- Java Script
