--- a/aboutUs.html
+++ b/aboutUs.html
@@ -158,12 +158,12 @@ Happy Shopping.
                <p></p>
 
                <ul class="member-social">
-                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  <li><a href="https://twitter.com/ParthBhalodiy12?s=09"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="https://www.linkedin.com/in/parth-bhalodiya-555011128"><i class="fa fa-linkedin"></i></a></li>
 				  <!--<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-				  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+				  <li><a href="https://www.facebook.com/parth.bhalodiya.921/"><i class="fa fa-facebook"></i></a></li>
                   <li><a href="#"><i class="fa fa-skype"></i></a></li>-->
-				  <li><a href="#"><i class="fa fa-github"></i></a></li>
+				  <li><a href="https://github.com/parth2411"><i class="fa fa-github"></i></a></li>
                </ul>
 
             </div> <!-- end member -->
