--- a/aboutUs.html
+++ b/aboutUs.html
@@ -127,10 +127,10 @@ Happy Shopping.
                </div>
                <div class="member-name">
                   <h3>Dhyey Patel</h3>
-                  <!--<span>Creative Director</span>-->
+                  <span>CTO</span>
                </div>
 
-               <p></p>
+               <p>Machine Learning Enthusiast, Android & AR</p>
 
                <ul class="member-social">
                   
@@ -152,10 +152,10 @@ Happy Shopping.
                </div>
                <div class="member-name">
                   <h3>Parth Bhalodiya</h3>
-                  <!--<span>Lead Designer</span>--->
+                  <span>COO</span>
                </div>
 
-               <p></p>
+               <p>Machine Learning Enthusiast & Operational Skills</p>
 
                <ul class="member-social">
                   <li><a href="https://twitter.com/ParthBhalodiy12?s=09"><i class="fa fa-twitter"></i></a></li>
@@ -176,10 +176,10 @@ Happy Shopping.
                </div>
                <div class="member-name">
                   <h3>Kishan Vaishnani</h3>
-                  <!--<span>Designer</span>-->
+                  <span>CEO</span>
                </div>
 
-               <p> </p>
+               <p>Machine Learning Enthusiast & Marketing Skills </p>
 
                <ul class="member-social">
                    
