--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td>
+					<!---<td>
 						<div id="android">
 							<a class="smoothscroll" title="Back to Top" href="#hero">Download Android Application</a>
 						</div>
-					</td>
+					</td>--->
 					<td>
 					</td>
 				</tr>
@@ -117,7 +117,7 @@
          <div class="line"/>
        </div>
 
-       <div class="card-row clearfix">
+       <div class="card-row clearfix flex-container">
 
        
 
